--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -99,6 +99,9 @@
     .dark_header {
       color: black;
     }
+    .text_white {
+      color: white !important;
+    }
     tr, th, td {
       font-size: 20px;
     }
@@ -143,7 +146,7 @@
           {% for post in reflection %}
           <div class="collapsible">
             <input id=collapsible{{post.id}} type="checkbox" name="collapsible">
-            <label for=collapsible{{post.id}}>{{post.title}}</label>
+            <label for=collapsible{{post.id}} id="post_title">{{post.title}}</label>
             <div class="collapsible-body">
               <div class="reflection_container">
                 <div class="card" style="width: 26rem;">
@@ -279,13 +282,16 @@
       let mode_button = document.querySelector("#change_me")
       let assignments_header = document.querySelector("#assignment_header")
       let motivate_header = document.querySelector("#motivation_header")
+      let post_title = document.querySelector("#post_title")
 
 
       mode_button.addEventListener("click", function(){
         document.body.classList.toggle('dark_mode')
         assignments_header.classList.toggle('dark_header')
         motivate_header.classList.toggle('dark_header')
+        post_title.classList.toggle('text_white')
       })
+
 
   </script>
 
