--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -105,6 +105,68 @@
     tr, th, td {
       font-size: 20px;
     }
+    .skew_container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container_box {
+      position: relative;
+      max-width: 450px;
+      transform: skewY(-20deg);
+    }
+    .container_box .imgBx{
+      position: relative;
+      width: 100%;
+      height: 180px;
+      transform-origin: bottom;
+      transform: skewX(45deg);
+    }
+    .container_box .imgBx h1 {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      max-width: 100%;
+      transition: 0.5s;
+    }
+    .container_box .imgBx:hover h1:nth-child(3) {
+      transform: translate(100px, -100px);
+    } 
+    .container_box .imgBx:hover h1:nth-child(2) {
+      transform: translate(50px, -50px);
+      opacity: 0.5;
+    } 
+     .container_box .imgBx:hover h1:nth-child(1) {
+      transform: translate(0px, -0px);
+      opacity: 0.1;
+    } 
+    .container_box h2 {
+      position: relative;
+    }
+    .container_box .skew {
+      transform-origin: top;
+      transform: skewX(45deg);
+    }
+    .container_box .skew h3 {
+      position: relative;
+      padding: 10px;
+      display: inline-block;
+      background: transparent;
+      transform-origin: top;
+      transform: skewX(-45deg);
+    }
+    .container_box .skew p {
+      width: 75%;
+      text-align: center;
+    }
+    .hide_skew {
+     color: #F5FFFA !important;
+    }
+
+    .hide_skew p {
+      background-color: gray;
+    }
+
     
   </style>
 
@@ -168,6 +230,21 @@
             </div>
           </div>
           {% endfor %}
+
+          <div class="skew_container">
+            <div class="container_box">
+                <!-- <div class="imgBx">
+                  <h1 class="hide_skew">Hi</h1>
+                  <h1 class="hide_skew">Hi</h1>
+                  <h1 class="hide_skew">Hi</h1>
+                </div> -->
+                <h2 class="hide_skew">Learn Every Day</h2>
+                <div class="skew">
+                  <h4 class="hide_skew">"Learning is the only thing the mind never exhaust, never fears, and never regret"</h4>
+                  <h3 href="#" class="hide_skew">Leonardo Da Vinci</h3>
+                </div>
+              </div>
+          </div>
         
         </div><!--col-->
         
@@ -283,6 +360,7 @@
       let assignments_header = document.querySelector("#assignment_header")
       let motivate_header = document.querySelector("#motivation_header")
       let post_title = document.querySelector("#post_title")
+      let hide_skew = document.querySelectorAll(".hide_skew")
 
 
       mode_button.addEventListener("click", function(){
@@ -290,6 +368,8 @@
         assignments_header.classList.toggle('dark_header')
         motivate_header.classList.toggle('dark_header')
         post_title.classList.toggle('text_white')
+        hide_skew.classList.toggle('text_white')
+        
       })
 
 
