--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -30,6 +30,9 @@
         text-decoration: none;
         transition: all 0.3s ease-in;
     }
+    .my-bg{
+         background-color: #2E3233;
+    }
 </style>
 
 <br/>
@@ -47,7 +50,7 @@
 <hr/>
 
 <div class="container" >
-    <div class="border margin-large my-card my-container">
+    <div class="border margin-large my-card my-container my-bg">
         <div class="card-body">
             <h4 class="card-title" style="color: #fff;">Search For Achievements by Tag</h4>
             <form action="/search">
@@ -87,7 +90,7 @@
         {% endfor %}
     </div>
 </div>
-<<<<<<< HEAD
+
 
 </body>
 <footer>
@@ -96,7 +99,7 @@
 
 {% comment %} </div> {% endcomment %}
 
-{% endblock  %}
-=======
+
+
 {% endblock %}
->>>>>>> b3b5721825e083bab371a6dd837a749110a6ca31
+
