changed home page and add hover over delte buttons and made little changes to make site user friendly

--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -45,7 +45,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
         <td>
-            <a href='/delete_assignment/{{assignment.id}}' class="paper-btn btn-info-outline">Delete</a>
+            <a href='/delete_assignment/{{assignment.id}}' class="paper-btn btn-info-outline" popover-top="ARE YOU SURE❓">Delete</a>
         </td>
       </tr>
     </tbody>
