--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css" integrity="sha512-wCwx+DYp8LDIaTem/rpXubV/C1WiNRsEVqoztV0NZm8tiTvsUeSlA/Uz02VTGSiqfzAHD4RnqVoevMcRZgYEcQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.min.css" integrity="sha512-wYsVD8ho6rJOAo1Xf92gguhOGQ+aWgxuyKydjyEax4bnuEmHUt6VGwgpUqN8VlB4w50d0nt+ZL+3pgaFMAmdNQ==" crossorigin="anonymous" />
-    
+
 
      <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
 
@@ -29,12 +29,13 @@
   </style>
 <body>
 
+  {% comment %} 
     <div class="navbar_box">
       <a href="{% url 'register' %}" class="paper-btn btn-info"> New User: Sign Up Here!</a>
       <a href="{% url 'login' %}" class="paper-btn btn-info">Login</a>
       <a href="{% url 'blog' %}" class="paper-btn btn-info">Check out Blogs</a>
       <a href="" class="paper-btn btn-info" id="change_me">Dark Mode</a>
-    </div>
+    </div> {% endcomment %}
 
     {% block content %}
     {% endblock %}
