--- a/templates/blog/safety.html
+++ b/templates/blog/safety.html
@@ -26,3 +26,14 @@
             <div class="swiper-pagination"></div>
         </div>
     </div> 
+
+
+
+
+
+
+    new Glide('.glide', {
+        type: 'carousel',
+        startAt: 0,
+        perView: 3,
+    }).mount()
