--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
   </style>
 <body>
 
-  {% comment %} 
-    <div class="navbar_box">
+
+    {% comment %} <div class="navbar_box">
       <a href="{% url 'register' %}" class="paper-btn btn-info"> New User: Sign Up Here!</a>
       <a href="{% url 'login' %}" class="paper-btn btn-info">Login</a>
       <a href="{% url 'blog' %}" class="paper-btn btn-info">Check out Blogs</a>
