--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,13 @@
 
     <title>Journal</title>
   </head>
-  <body> 
+  
+  <style>
+    .card-body {
+      margin-top: -25px;
+    }
+  </style>
+<body> 
 
 <br/>
 
@@ -40,7 +46,7 @@
 <div class="row flex-center">
 {% comment %} <div class="sm-4 col"> {% endcomment %}
  {% comment %} <div class="card" > {% endcomment %}
-  <div class="card" style="width: 20rem;" >  
+  <div class="card" style="width: 20rem; height: 25rem;" >  
   <div class="card-body">
     <h4 class="card-title"><b>Your Personal Bullet Journal!</b><br/></h4>
     <h5 class="card-subtitle">Uses:</h5> 
