--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -50,17 +50,6 @@
     .card_buttons {
         display: flex;
     }
-    .glide {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .glide__slide {
-        color: red !important;
-        border: 1px solid greenyellow;
-        height: 300px;
-        width: 300px;
-    }
     .card-box {
         position: relative;
         background: black;
@@ -110,41 +99,21 @@
 </div>
 <br>
 
-<div class="container" >
-    <div class="border margin-large my-card my-container my-bg">
-        <div class="card-body">
-            <h4 class="card-title" style="color: #fff;">Search For Achievements by Tag</h4>
-            <form action="/search">
-                <div class="row flex-middle">
-                    <div class="col sm-12">
-                        <div class="form-group background-primary">
-                            <input class="input-block" type="text" name="tags" id="paperInputs2" placeholder="Search by Tags" style="color: #fff;">
-                        </div>
-                    </div>
+<div class="container test_container" >
+    <div class="card">
+        <h4 class="card-title" style="color: #000;">Search For Achievements by Tag</h4>
+        <form action="/search">
+            <div class="row flex-middle">
+                <div class="col sm-12">
+                        <input class="search-input" type="text" name="tags" id="paperInputs2" placeholder="Search by Tags" style="color: #000; font-size: 18px;">
+                    <button type="submit" class="paper-btn btn-primary search-button" value="Primary">Search</button>
                 </div>
-                <div class="submit-btn">
-                    <button type="submit" class="paper-btn btn-primary" value="Primary">Search</button>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
-</div> 
+</div>
 
-    {% comment %} <div class="container test_container" >
-        <div class="card">
-            <h4 class="card-title" style="color: #000;">Search For Achievements by Tag</h4>
-            <form action="/search">
-                <div class="row flex-middle">
-                    <div class="col sm-12">
-                            <input class="search-input" type="text" name="tags" id="paperInputs2" placeholder="Search by Tags" style="color: #000; font-size: 18px;">
-                        <button type="submit" class="paper-btn btn-primary search-button" value="Primary">Search</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div> {% endcomment %}
-
- {% comment %} <div class="container-fluid my-container"> 
+ <div class="container-fluid my-container"> 
      <div class="row flex-center carousel">
         {% for post in results %}
         <div class="card carousel-item card_container card-box">
@@ -179,52 +148,18 @@
             {% endfor %}
             <div class="swiper-pagination"></div>
         </div>
-    </div>   {% endcomment %}
+    </div>   
     
-
-<div class="glide">
-  <div class="glide__track" data-glide-el="track">
-    <ul class="glide__slides">
-      {% for post in results %}
-            <div class="card display-card card_container glide__slide">
-                <a class="card-link" href="/article/{{post.id}}" >
-                <div class="card-body ">
-                   <h4 class="card-title">{{ post.title}}</h4>
-                    <h5 class="card-subtitle">Created by {{ post.author }} {{post.list_date| timesince}} ago</h5>
-                    <p class="card-text">{{post.body|truncatechars:50}}</p>
-                    <hr></a>
-                    {% if post.author.id  != request.user.id %}
-                        <p>Tag: {{post.tags}}</p>
-                        <p> Comments: {{post.comments.count}} </p>
-                    {% else %}
-                        <p>Comments: {{post.comments.count}} </p>
-                        <div class="card_buttons">
-                            <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
-                            <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
-                        </div>
-                    {% endif %}
-                </div>
-            </a>
-            </div>
-        {% endfor %}
-    </ul>
-  </div>
-   <div class="glide__arrows" data-glide-el="controls">
-    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fa fa-angle-left"></i></button>
-    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fa fa-angle-right"></i></button>
-  </div>
 
 </div><!--Carousel Container-->
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" integrity="sha512-BXASbMmKLu+RC5TDnkupyhvrjiOQXILh/5zgIS8k5JAC71a73lNweVEg/X+9XJQ7GK22PH9WpztY3zqrji+xrQ==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 <script>    
     $(document).ready(function(){
     $('.carousel').carousel();
   });
-
 </script>
 
 {% endblock %}
