--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -37,7 +37,7 @@
     {% endfor %}
 {% endif %}
   <h3>{{title}}</h3>
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" action="" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.media}}
      {{ form.as_p }}
