--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -202,7 +202,7 @@
 
               <div class='card_img'>
                 <h2>{{user.username}}'s Journal</h2> 
-                <h4 id='assignment_header'>Assignments Need to Complete: {{count}}</h4>
+                <h4 id='assignment_header'>Assignments Created: {{count}}</h4>
               </div>
 
             </div>
