made changes to home page

--- a/templates/blog/results.html
+++ b/templates/blog/results.html
@@ -84,6 +84,9 @@
                     <hr></a>
                     {% if post.author.id  != request.user.id %}
                         <p>Tags: {{post.tags}}</p>
+                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                        <p><i class="fas fa-lemon"></i> Dislikes: {{post.dislikes}} </p>
+                        <p>Comments: {{post.comments.count}} </p>
                     {% else %}
                         <a class="paper-btn btn-danger" popover-top="ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
                         <a class="paper-btn btn-success" href="/edit_post/{{post.id}}">Edit Post</a>
