--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -16,9 +16,13 @@
 </style>
 <div class="container-fluid margin-left-medium"> 
   <div class="navbar_box">
+    {% if user.is_authenticated %}
+    <a href="/" class="paper-btn btn-info">Home</a>
+    <a href="{% url 'blog' %}" class="paper-btn btn-info">Back to Blog</a>
+    {% else %}
     <a href="/" class="paper-btn btn-info">Home</a>
     <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
-    {% if user.is_authenticated %}<a href="{% url 'blog' %}" class="paper-btn btn-info">Back to Blog</a>{% endif %}
+    {% endif %}
   </div>
 </div>
 
@@ -27,13 +31,20 @@
         <h1 class="article-title">{{results.title}}</h1>
         <p class="article-meta">Written by {{results.author|capfirst}} {{results.list_date| timesince}} ago</a></p>
         <p>{{results.body}}</p>
-        <div>
-          <a href="/upvote/{{results.id}}/"><i class="fas fa-hand-spock"></i>Like!,  {{results.likes}}</a>
-          <hr>
-          <a href="/downvote/{{results.id}}/"><i class="fas fa-lemon"></i>Dislike!,  {{results.dislikes}}</a>
-        </div>
         {% if post.author.id  != request.user.id %}
+        <div>
+          <a class="paper-btn btn-info" href="/upvote/{{results.id}}/"><i class="fas fa-hand-spock"></i>Like!,  {{results.likes}}</a>
+          {% comment %} <hr> {% endcomment %}
+          {% comment %} <a class="paper-btn btn-info" href="/downvote/{{results.id}}/"><i class="fas fa-lemon"></i>Dislike!,  {{results.dislikes}}</a> {% endcomment %}
+        </div>
+        <hr>
         <a href="/comment/{{results.id}}/" class="paper-btn btn-info">Make a Comment</a>
+        {% comment %} {% endif %} {% endcomment %}
+        {% comment %} {% if user.isnot_authenticated%} {% endcomment %}
+        {% else %}
+        <p><i class="fas fa-hand-spock"></i> Likes: {{results.likes}} </p>
+        <hr>
+        {% comment %} <p><i class="fas fa-lemon"></i> Dislikes: {{results.dislikes}} </p> {% endcomment %}
         {% endif %}
         <a id="flip" class="paper-btn btn-info"> {{comments.count}} Comment{{comments.count|pluralize}}</a>
   <div class="container-fluid my-container" id="panel">
