--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -88,8 +88,13 @@
                     <hr></a>
                     {% if post.author.id  != request.user.id %}
                         <p>Tag: {{post.tags}}</p>
+                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                        {% comment %} <p><i class="fas fa-lemon"></i> Dislikes: {{post.dislikes}} </p> {% endcomment %}
                         <p> Comments: {{post.comments.count}} </p>
                     {% else %}
+                        <p>Tag: {{post.tags}}</p>
+                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                        {% comment %} <p><i class="fas fa-lemon"></i> Dislikes: {{post.dislikes}} </p> {% endcomment %}
                         <p>Comments: {{post.comments.count}} </p>
                         <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
                         <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
