--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -25,7 +25,7 @@
         width: 100%;
     }
     .card {
-        height: 235px !important;
+        height: 250px !important;
     }
     .card-title {
         text-align: center;
@@ -44,8 +44,9 @@
     }
     .card_container {
         margin-top: -50px;
-        height: 325px !important;
+        height: 470px !important;
         width: 325px !important;
+        border: 1px solid greenyellow;
     }
     .card_buttons {
         display: flex;
@@ -63,7 +64,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 370px;
+        height: 460px;
         width: 330px;
         background: linear-gradient(135deg, blue, red);
         transition: 0.5s;
@@ -72,7 +73,7 @@
       bottom: -30%;
     }
     img {
-        height: 370px;
+        height: 470px;
         width: 330px;
     }
     .navbar_box {
@@ -126,42 +127,26 @@
                         <hr>
                         {% if post.author.id  != request.user.id %}
                             <p>Tag: {{post.tags}}</p>
+                            <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
                             <p> Comments: {{post.comments.count}} </p>
                         {% else %}
-                            <p>Comments: {{post.comments.count}} </p>
-                            <div class="card_buttons">
-                                <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
-                                <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
-                            </div>
+                        <p>Tag: {{post.tags}}</p>
+                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
+                        <p>Comments: {{post.comments.count}} </p>
+                        <!-- <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
+                        <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a> -->
                         {% endif %}
-                        <div class="card-image">
+                        <!-- <div class="card-image">
                             {% if post.blog_image %}
                                 <img
                                 src="{{post.blog_image.url}}"
                                 alt="Blog Image" />
                             {% endif %}
-                        </div>
-                    </div>
+                        </div> -->
+                </div>
 
                 </a>
-                   <h4 class="card-title">{{ post.title}}</h4>
-                    <h5 class="card-subtitle">Created by {{ post.author }} {{post.list_date| timesince}} ago</h5>
-                    <p class="card-text">{{post.body|truncatechars:50}}</p>
-                    <hr></a>
-                    {% if post.author.id  != request.user.id %}
-                        <p>Tag: {{post.tags}}</p>
-                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
-                        {% comment %} <p><i class="fas fa-lemon"></i> Dislikes: {{post.dislikes}} </p> {% endcomment %}
-                        <p> Comments: {{post.comments.count}} </p>
-                    {% else %}
-                        <p>Tag: {{post.tags}}</p>
-                        <p><i class="fas fa-hand-spock"></i> Likes: {{post.likes}} </p>
-                        {% comment %} <p><i class="fas fa-lemon"></i> Dislikes: {{post.dislikes}} </p> {% endcomment %}
-                        <p>Comments: {{post.comments.count}} </p>
-                        <a class="paper-btn btn-danger" popover-top=" ARE YOU SURE❓" href="/delete_post/{{post.id}}">Delete</a>
-                        <a  class="paper-btn btn-success"  href="/edit_post/{{post.id}}">Edit Post</a>
-                    {% endif %}
-                </div>
+
             </div>
             {% endfor %}
             <div class="swiper-pagination"></div>
@@ -182,6 +167,6 @@
 
 {% endblock %}
 
-{% comment %} class="paper-btn btn-info" {% endcomment %}
+
 
 
