--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -55,6 +55,7 @@
     {% endif %}
 </div>
 <hr/>
+{{toptags}}
 
 <div class="container" >
     <div class="border margin-large my-card my-container my-bg">
